elf: Simplify big-endian tools
This commit merge big endian tool declaration at the root element and
those inside of the big endian toolchain.

--- a/org.eclipse.cdt.cross.arc.gnu/gnu.elf.properties
+++ b/org.eclipse.cdt.cross.arc.gnu/gnu.elf.properties
@@ -40,3 +40,14 @@ toolchain.arc700 = GNU Toolchain for ARC700
 toolchain.arc700eb = GNU Toolchain for ARC700 (big-endian)
 toolchain.arc600 = GNU Toolchain for ARC600
 toolchain.arc600eb = GNU Toolchain for ARC600 (big-endian)
+
+# Tools
+tool.assembler_eb = ARC GCC Assembler (EB)
+tool.c.compiler_eb = ARC GCC C Compiler (EB)
+tool.cpp.compiler_eb = ARC GCC C++ Compiler (EB)
+tool.c.linker_eb = ARC GCC C Linker (EB)
+tool.cpp.linker_eb = ARC GCC C++ Linker (EB)
+tool.archiver_eb = ARC GCC Archiver (EB)
+tool.flash_eb = ARC GNU Create Flash Image (EB)
+tool.listing_eb = ARC GNU Create Listing (EB)
+tool.printsize_eb = ARC GNU Print Size (EB)
