elf: Move print size tool into the little endian toolchain

--- a/org.eclipse.cdt.cross.arc.gnu/gnu.elf.properties
+++ b/org.eclipse.cdt.cross.arc.gnu/gnu.elf.properties
@@ -42,6 +42,7 @@ toolchain.arc600 = GNU Toolchain for ARC600
 toolchain.arc600eb = GNU Toolchain for ARC600 (big-endian)
 
 # Tools
+tool.printsize = ARC GNU Print Size
 tool.assembler_eb = ARC GCC Assembler (EB)
 tool.c.compiler_eb = ARC GCC C Compiler (EB)
 tool.cpp.compiler_eb = ARC GCC C++ Compiler (EB)
