--- a/org.eclipse.cdt.cross.arc.gnu/plugin.xml
+++ b/org.eclipse.cdt.cross.arc.gnu/plugin.xml
@@ -1885,55 +1885,6 @@
             </checkBuildProperty>
          </enablement>
       </tool>
-      <tool
-            command="arc-elf32-objdump"
-            id="org.eclipse.cdt.cross.arc.gnu.createlisting"
-            name="ARC ELF32 Create Listing"
-            natureFilter="both"
-            outputFlag="&gt;">
-         <optionCategory
-               id="org.eclipse.cdt.cross.arc.gnu.createlisting.general"
-               name="General"
-               owner="org.eclipse.cdt.cross.arc.gnu.createlisting">
-         </optionCategory>
-         <option
-               category="org.eclipse.cdt.cross.arc.gnu.createlisting.general"
-               defaultValue="-h -S"
-               id="org.eclipse.cdt.cross.arc.gnu.createlisting.general.otherflags"
-               name="Other flags"
-               valueType="string">
-         </option>
-         <outputType
-               buildVariable="SECONDARY_LIST"
-               id="org.eclipse.cdt.cross.arc.gnu.createlisting.output"
-               outputNames="${BuildArtifactFileBaseName}.lst"
-               outputs="lst">
-         </outputType>
-         <inputType
-               id="org.eclipse.cdt.cross.arc.gnu.createlisting.input"
-               multipleOfType="true"
-               option="org.eclipse.cdt.cross.arc.gnu.createlisting.InFileName"
-               sources="elf">
-         </inputType>
-         <option
-               id="org.eclipse.cdt.cross.arc.gnu.createlisting.InFileName"
-               resourceFilter="all"
-               value="${BuildArtifactFileName}"
-               valueType="string">
-         </option>
-         <enablement
-               type="ALL">
-            <checkOption
-                  holderId="com.synopsys.arc.gnu.elf.toolchain.base"
-                  optionId="com.synopsys.arc.gnu.elf.toolchain.base.extratools.listing"
-                  value="true">
-            </checkOption>
-            <checkBuildProperty
-                  property="org.eclipse.cdt.build.core.buildArtefactType"
-                  value="org.eclipse.cdt.cross.arc.gnu.buildArtefactType.application">
-            </checkBuildProperty>
-         </enablement>
-      </tool>
       <toolChain
             id="com.synopsys.arc.gnu.elf.toolchain.base"
             isAbstract="true"
@@ -2966,7 +2917,7 @@
       <toolChain
             id="com.synopsys.arc.gnu.elf.toolchain.arc"
             isAbstract="true"
-            secondaryOutputs="org.eclipse.cdt.cross.arc.gnu.createflash.output;org.eclipse.cdt.cross.arc.gnu.createlisting.output;com.synopsys.arc.gnu.elf.tool.printsize.arc.output"
+            secondaryOutputs="org.eclipse.cdt.cross.arc.gnu.createflash.output;com.synopsys.arc.gnu.elf.tool.listing.arc.output;com.synopsys.arc.gnu.elf.tool.printsize.arc.output"
             superClass="com.synopsys.arc.gnu.elf.toolchain.base"
             targetTool="org.eclipse.cdt.cross.arc.gnu.c.linker;org.eclipse.cdt.cross.arc.gnu.cpp.linker">
          <tool
@@ -2998,8 +2949,53 @@
                superClass="org.eclipse.cdt.cross.arc.gnu.createflash">
          </tool>
          <tool
+               command="arc-elf32-objdump"
                id="com.synopsys.arc.gnu.elf.tool.listing.arc"
-               superClass="org.eclipse.cdt.cross.arc.gnu.createlisting">
+               name="%tool.listing"
+               natureFilter="both"
+               outputFlag="&gt;">
+            <optionCategory
+                  id="com.synopsys.arc.gnu.elf.tool.listing.arc.general"
+                  name="General"
+                  owner="com.synopsys.arc.gnu.elf.tool.listing.arc">
+            </optionCategory>
+            <option
+                  category="com.synopsys.arc.gnu.elf.tool.listing.arc.general"
+                  defaultValue="-h -S"
+                  id="com.synopsys.arc.gnu.elf.tool.listing.arc.general.otherflags"
+                  name="Other flags"
+                  valueType="string">
+            </option>
+            <outputType
+                  buildVariable="SECONDARY_LIST"
+                  id="com.synopsys.arc.gnu.elf.tool.listing.arc.output"
+                  outputNames="${BuildArtifactFileBaseName}.lst"
+                  outputs="lst">
+            </outputType>
+            <inputType
+                  id="com.synopsys.arc.gnu.elf.tool.listing.arc.input"
+                  multipleOfType="true"
+                  option="com.synopsys.arc.gnu.elf.tool.listing.arc.InFileName"
+                  sources="elf">
+            </inputType>
+            <option
+                  id="com.synopsys.arc.gnu.elf.tool.listing.arc.InFileName"
+                  resourceFilter="all"
+                  value="${BuildArtifactFileName}"
+                  valueType="string">
+            </option>
+            <enablement
+                  type="ALL">
+               <checkOption
+                     holderId="com.synopsys.arc.gnu.elf.toolchain.base"
+                     optionId="com.synopsys.arc.gnu.elf.toolchain.base.extratools.listing"
+                     value="true">
+               </checkOption>
+               <checkBuildProperty
+                     property="org.eclipse.cdt.build.core.buildArtefactType"
+                     value="org.eclipse.cdt.cross.arc.gnu.buildArtefactType.application">
+               </checkBuildProperty>
+            </enablement>
          </tool>
          <tool
                command="arc-elf32-size"
@@ -3085,7 +3081,7 @@
       <toolChain
             id="com.synopsys.arc.gnu.elf.toolchain.arceb"
             isAbstract="true"
-            secondaryOutputs="org.eclipse.cdt.cross.arc.gnu.createflash.output;org.eclipse.cdt.cross.arc.gnu.createlisting.output;com.synopsys.arc.gnu.elf.tool.printsize.arc.output"
+            secondaryOutputs="org.eclipse.cdt.cross.arc.gnu.createflash.output;com.synopsys.arc.gnu.elf.tool.listing.arc.output;com.synopsys.arc.gnu.elf.tool.printsize.arc.output"
             superClass="com.synopsys.arc.gnu.elf.toolchain.base"
             targetTool="org.eclipse.cdt.cross.arc.gnu.c.linker;org.eclipse.cdt.cross.arc.gnu.cpp.linker">
          <tool
@@ -3149,7 +3145,7 @@
                command="arceb-elf32-objdump"
                id="com.synopsys.arc.gnu.elf.tool.listing.arceb"
                name="%tool.listing_eb"
-               superClass="org.eclipse.cdt.cross.arc.gnu.createlisting">
+               superClass="com.synopsys.arc.gnu.elf.tool.listing.arc">
          </tool>
          <tool
                command="arceb-elf32-size"
