--- a/org.eclipse.cdt.cross.arc.gnu/plugin.xml
+++ b/org.eclipse.cdt.cross.arc.gnu/plugin.xml
@@ -1749,142 +1749,6 @@
                outputs="a">
          </outputType>
       </tool>
-      <tool
-            command="arc-elf32-objcopy"
-            id="org.eclipse.cdt.cross.arc.gnu.createflash"
-            name="ARC ELF32 Create Flash Image"
-            natureFilter="both">
-         <optionCategory
-               id="org.eclipse.cdt.cross.arc.gnu.createflash.out"
-               name="Output"
-               owner="org.eclipse.cdt.cross.arc.gnu.createflash">
-         </optionCategory>
-         <option
-               category="org.eclipse.cdt.cross.arc.gnu.createflash.out"
-               id="org.eclipse.cdt.cross.arc.gnu.createflash.out.choice"
-               name="Output file format (-O)"
-               valueType="enumerated">
-            <enumeratedOptionValue
-                  command="-O ihex"
-                  id="org.eclipse.cdt.cross.arc.gnu.createflash.out.choice.ihex"
-                  name="ihex">
-            </enumeratedOptionValue>
-            <enumeratedOptionValue
-                  command="-O elf32-littlearc"
-                  id="org.eclipse.cdt.cross.arc.gnu.createflash.out.choice.elf32-littlearc"
-                  name="elf32-littlearc">
-            </enumeratedOptionValue>
-            <enumeratedOptionValue
-                  command="-O elf32-bigarc"
-                  id="org.eclipse.cdt.cross.arc.gnu.createflash.out.choice.elf32-bigarc"
-                  name="elf32-bigarc">
-            </enumeratedOptionValue>
-            <enumeratedOptionValue
-                  command="-O elf32-little"
-                  id="org.eclipse.cdt.cross.arc.gnu.createflash.out.choice.elf32-little"
-                  name="elf32-little">
-            </enumeratedOptionValue>
-            <enumeratedOptionValue
-                  command="-O elf32-big"
-                  id="org.eclipse.cdt.cross.arc.gnu.createflash.out.choice.elf32-big"
-                  name="elf32-bit">
-            </enumeratedOptionValue>
-            <enumeratedOptionValue
-                  command="-O srec"
-                  id="org.eclipse.cdt.cross.arc.gnu.createflash.out.choice.srec"
-                  name="srec">
-            </enumeratedOptionValue>
-            <enumeratedOptionValue
-                  command="-O symbolsrec"
-                  id="org.eclipse.cdt.cross.arc.gnu.createflash.out.choice.symbolsrec"
-                  name="symbolsrec">
-            </enumeratedOptionValue>
-            <enumeratedOptionValue
-                  command="-O tekhex"
-                  id="org.eclipse.cdt.cross.arc.gnu.createflash.out.choice.tekhex"
-                  name="tekhex">
-            </enumeratedOptionValue>
-            <enumeratedOptionValue
-                  command="-O binary"
-                  id="org.eclipse.cdt.cross.arc.gnu.createflash.out.choice.binary"
-                  name="binary">
-            </enumeratedOptionValue>
-         </option>
-         <optionCategory
-               id="org.eclipse.cdt.cross.arc.gnu.createflash.section"
-               name="Section"
-               owner="org.eclipse.cdt.cross.arc.gnu.createflash">
-         </optionCategory>
-         <option
-               category="org.eclipse.cdt.cross.arc.gnu.createflash.section"
-               command="-j .text"
-               id="org.eclipse.cdt.cross.arc.gnu.createflash.section.text"
-               isAbstract="false"
-               name="Section: -j .text"
-               resourceFilter="all"
-               valueType="boolean">
-         </option>
-         <option
-               category="org.eclipse.cdt.cross.arc.gnu.createflash.section"
-               command="-j .data"
-               id="org.eclipse.cdt.cross.arc.gnu.createflash.section.data"
-               isAbstract="false"
-               name="Section: -j .data"
-               resourceFilter="all"
-               valueType="boolean">
-         </option>
-         <option
-               category="org.eclipse.cdt.cross.arc.gnu.createflash.section"
-               command="-j "
-               id="org.eclipse.cdt.cross.arc.gnu.section.other"
-               isAbstract="false"
-               name="Other (-j)"
-               resourceFilter="all"
-               valueType="stringList">
-         </option>
-         <optionCategory
-               id="org.eclipse.cdt.cross.arc.gnu.createflash.misc"
-               name="Miscellaneous"
-               owner="org.eclipse.cdt.cross.arc.gnu.createflash">
-         </optionCategory>
-         <option
-               category="org.eclipse.cdt.cross.arc.gnu.createflash.misc"
-               id="org.eclipse.cdt.cross.arc.gnu.createflash.misc.otheropt"
-               name="Other options"
-               valueType="string">
-         </option>
-         <outputType
-               buildVariable="SECONDARY_FLASH"
-               id="org.eclipse.cdt.cross.arc.gnu.createflash.output"
-               outputContentType="org.eclipse.cdt.cross.arc.gnu.content-type.hex"
-               outputNames="${BuildArtifactFileBaseName}.hex"
-               outputs="hex">
-         </outputType>
-         <inputType
-               id="org.eclipse.cdt.cross.arc.gnu.createflash.input"
-               multipleOfType="true"
-               option="org.eclipse.cdt.cross.arc.gnu.createflash.InFileName"
-               sources="elf">
-         </inputType>
-         <option
-               id="org.eclipse.cdt.cross.arc.gnu.createflash.InFileName"
-               resourceFilter="all"
-               value="${BuildArtifactFileName}"
-               valueType="string">
-         </option>
-         <enablement
-               type="ALL">
-            <checkOption
-                  holderId="com.synopsys.arc.gnu.elf.toolchain.base"
-                  optionId="com.synopsys.arc.gnu.elf.toolchain.base.extratools.flash"
-                  value="true">
-            </checkOption>
-            <checkBuildProperty
-                  property="org.eclipse.cdt.build.core.buildArtefactType"
-                  value="org.eclipse.cdt.cross.arc.gnu.buildArtefactType.application">
-            </checkBuildProperty>
-         </enablement>
-      </tool>
       <toolChain
             id="com.synopsys.arc.gnu.elf.toolchain.base"
             isAbstract="true"
@@ -2917,7 +2781,7 @@
       <toolChain
             id="com.synopsys.arc.gnu.elf.toolchain.arc"
             isAbstract="true"
-            secondaryOutputs="org.eclipse.cdt.cross.arc.gnu.createflash.output;com.synopsys.arc.gnu.elf.tool.listing.arc.output;com.synopsys.arc.gnu.elf.tool.printsize.arc.output"
+            secondaryOutputs="com.synopsys.arc.gnu.elf.tool.flash.arc.output;com.synopsys.arc.gnu.elf.tool.listing.arc.output;com.synopsys.arc.gnu.elf.tool.printsize.arc.output"
             superClass="com.synopsys.arc.gnu.elf.toolchain.base"
             targetTool="org.eclipse.cdt.cross.arc.gnu.c.linker;org.eclipse.cdt.cross.arc.gnu.cpp.linker">
          <tool
@@ -2945,8 +2809,140 @@
                superClass="org.eclipse.cdt.cross.arc.gnu.archiver">
          </tool>
          <tool
+               command="arc-elf32-objcopy"
                id="com.synopsys.arc.gnu.elf.tool.flash.arc"
-               superClass="org.eclipse.cdt.cross.arc.gnu.createflash">
+               name="%tool.flash"
+               natureFilter="both">
+            <optionCategory
+                  id="com.synopsys.arc.gnu.elf.tool.flash.arc.out"
+                  name="Output"
+                  owner="com.synopsys.arc.gnu.elf.tool.flash.arc">
+            </optionCategory>
+            <option
+                  category="com.synopsys.arc.gnu.elf.tool.flash.arc.out"
+                  id="com.synopsys.arc.gnu.elf.tool.flash.arc.out.choice"
+                  name="Output file format (-O)"
+                  valueType="enumerated">
+               <enumeratedOptionValue
+                     command="-O ihex"
+                     id="com.synopsys.arc.gnu.elf.tool.flash.arc.out.choice.ihex"
+                     name="ihex">
+               </enumeratedOptionValue>
+               <enumeratedOptionValue
+                     command="-O elf32-littlearc"
+                     id="com.synopsys.arc.gnu.elf.tool.flash.arc.out.choice.elf32-littlearc"
+                     name="elf32-littlearc">
+               </enumeratedOptionValue>
+               <enumeratedOptionValue
+                     command="-O elf32-bigarc"
+                     id="com.synopsys.arc.gnu.elf.tool.flash.arc.out.choice.elf32-bigarc"
+                     name="elf32-bigarc">
+               </enumeratedOptionValue>
+               <enumeratedOptionValue
+                     command="-O elf32-little"
+                     id="com.synopsys.arc.gnu.elf.tool.flash.arc.out.choice.elf32-little"
+                     name="elf32-little">
+               </enumeratedOptionValue>
+               <enumeratedOptionValue
+                     command="-O elf32-big"
+                     id="com.synopsys.arc.gnu.elf.tool.flash.arc.out.choice.elf32-big"
+                     name="elf32-bit">
+               </enumeratedOptionValue>
+               <enumeratedOptionValue
+                     command="-O srec"
+                     id="com.synopsys.arc.gnu.elf.tool.flash.arc.out.choice.srec"
+                     name="srec">
+               </enumeratedOptionValue>
+               <enumeratedOptionValue
+                     command="-O symbolsrec"
+                     id="com.synopsys.arc.gnu.elf.tool.flash.arc.out.choice.symbolsrec"
+                     name="symbolsrec">
+               </enumeratedOptionValue>
+               <enumeratedOptionValue
+                     command="-O tekhex"
+                     id="com.synopsys.arc.gnu.elf.tool.flash.arc.out.choice.tekhex"
+                     name="tekhex">
+               </enumeratedOptionValue>
+               <enumeratedOptionValue
+                     command="-O binary"
+                     id="com.synopsys.arc.gnu.elf.tool.flash.arc.out.choice.binary"
+                     name="binary">
+               </enumeratedOptionValue>
+            </option>
+            <optionCategory
+                  id="com.synopsys.arc.gnu.elf.tool.flash.arc.section"
+                  name="Section"
+                  owner="com.synopsys.arc.gnu.elf.tool.flash.arc">
+            </optionCategory>
+            <option
+                  category="com.synopsys.arc.gnu.elf.tool.flash.arc.section"
+                  command="-j .text"
+                  id="com.synopsys.arc.gnu.elf.tool.flash.arc.section.text"
+                  isAbstract="false"
+                  name="Section: -j .text"
+                  resourceFilter="all"
+                  valueType="boolean">
+            </option>
+            <option
+                  category="com.synopsys.arc.gnu.elf.tool.flash.arc.section"
+                  command="-j .data"
+                  id="com.synopsys.arc.gnu.elf.tool.flash.arc.section.data"
+                  isAbstract="false"
+                  name="Section: -j .data"
+                  resourceFilter="all"
+                  valueType="boolean">
+            </option>
+            <option
+                  category="com.synopsys.arc.gnu.elf.tool.flash.arc.section"
+                  command="-j "
+                  id="com.synopsys.arc.gnu.elf.tool.flash.arc.section.other"
+                  isAbstract="false"
+                  name="Other (-j)"
+                  resourceFilter="all"
+                  valueType="stringList">
+            </option>
+            <optionCategory
+                  id="com.synopsys.arc.gnu.elf.tool.flash.arc.misc"
+                  name="Miscellaneous"
+                  owner="com.synopsys.arc.gnu.elf.tool.flash.arc">
+            </optionCategory>
+            <option
+                  category="com.synopsys.arc.gnu.elf.tool.flash.arc.misc"
+                  id="com.synopsys.arc.gnu.elf.tool.flash.arc.misc.otheropt"
+                  name="Other options"
+                  valueType="string">
+            </option>
+            <outputType
+                  buildVariable="SECONDARY_FLASH"
+                  id="com.synopsys.arc.gnu.elf.tool.flash.arc.output"
+                  outputContentType="org.eclipse.cdt.cross.arc.gnu.content-type.hex"
+                  outputNames="${BuildArtifactFileBaseName}.hex"
+                  outputs="hex">
+            </outputType>
+            <inputType
+                  id="com.synopsys.arc.gnu.elf.tool.flash.arc.input"
+                  multipleOfType="true"
+                  option="com.synopsys.arc.gnu.elf.tool.flash.arc.InFileName"
+                  sources="elf">
+            </inputType>
+            <option
+                  id="com.synopsys.arc.gnu.elf.tool.flash.arc.InFileName"
+                  resourceFilter="all"
+                  value="${BuildArtifactFileName}"
+                  valueType="string">
+            </option>
+            <enablement
+                  type="ALL">
+               <checkOption
+                     holderId="com.synopsys.arc.gnu.elf.toolchain.base"
+                     optionId="com.synopsys.arc.gnu.elf.toolchain.base.extratools.flash"
+                     value="true">
+               </checkOption>
+               <checkBuildProperty
+                     property="org.eclipse.cdt.build.core.buildArtefactType"
+                     value="org.eclipse.cdt.cross.arc.gnu.buildArtefactType.application">
+               </checkBuildProperty>
+            </enablement>
          </tool>
          <tool
                command="arc-elf32-objdump"
@@ -3081,7 +3077,7 @@
       <toolChain
             id="com.synopsys.arc.gnu.elf.toolchain.arceb"
             isAbstract="true"
-            secondaryOutputs="org.eclipse.cdt.cross.arc.gnu.createflash.output;com.synopsys.arc.gnu.elf.tool.listing.arc.output;com.synopsys.arc.gnu.elf.tool.printsize.arc.output"
+            secondaryOutputs="com.synopsys.arc.gnu.elf.tool.flash.arc.output;com.synopsys.arc.gnu.elf.tool.listing.arc.output;com.synopsys.arc.gnu.elf.tool.printsize.arc.output"
             superClass="com.synopsys.arc.gnu.elf.toolchain.base"
             targetTool="org.eclipse.cdt.cross.arc.gnu.c.linker;org.eclipse.cdt.cross.arc.gnu.cpp.linker">
          <tool
@@ -3136,10 +3132,10 @@
                superClass="org.eclipse.cdt.cross.arc.gnu.archiver">
          </tool>
          <tool
-               command="arceb-elf32-objcopy"
+               command="arceb-elf32-objdump"
                id="com.synopsys.arc.gnu.elf.tool.flash.arceb"
-               name="%tool.c.linker_eb"
-               superClass="org.eclipse.cdt.cross.arc.gnu.createflash">
+               name="%tool.flash_eb"
+               superClass="com.synopsys.arc.gnu.elf.tool.flash.arc">
          </tool>
          <tool
                command="arceb-elf32-objdump"
