--- a/org.eclipse.cdt.cross.arc.gnu/gnu.elf.properties
+++ b/org.eclipse.cdt.cross.arc.gnu/gnu.elf.properties
@@ -42,6 +42,7 @@ toolchain.arc600 = GNU Toolchain for ARC600
 toolchain.arc600eb = GNU Toolchain for ARC600 (big-endian)
 
 # Tools
+tool.archiver = ARC GNU Archiver
 tool.flash = ARC GNU Create Flash Image
 tool.listing = ARC GNU Create Listing
 tool.printsize = ARC GNU Print Size
@@ -50,7 +51,7 @@ tool.c.compiler_eb = ARC GCC C Compiler (EB)
 tool.cpp.compiler_eb = ARC GCC C++ Compiler (EB)
 tool.c.linker_eb = ARC GCC C Linker (EB)
 tool.cpp.linker_eb = ARC GCC C++ Linker (EB)
-tool.archiver_eb = ARC GCC Archiver (EB)
+tool.archiver_eb = ARC GNU Archiver (EB)
 tool.flash_eb = ARC GNU Create Flash Image (EB)
 tool.listing_eb = ARC GNU Create Listing (EB)
 tool.printsize_eb = ARC GNU Print Size (EB)
